Ending work with show/update/create training day