@@ -10,16 +10,17 @@ import training_manager.demo.enums.MuscleGroupEnum;
 import training_manager.demo.service.entity_service.MuscleService;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping
 @RequiredArgsConstructor
-public class auxiliaryController {
+public class AuxiliaryController {
 
     private final MuscleService muscleService;
 
     @GetMapping("/muscle_group")
     public List<MuscleGroupEnum> showAllMuscleGroup() {
-        return muscleService.findAllMuscle().stream().map(MuscleDTO::getMuscleGroup).toList();
+        return muscleService.findAllMuscle().stream().map(MuscleDTO::getMuscleGroup).collect(Collectors.toList());
     }
 }
